fix double scroll in components

--- a/css/style.css
+++ b/css/style.css
@@ -62,8 +62,6 @@
 }
 #tablamodelos table{
   background-color:lightgray;
-  overflow:auto;
-  max-height:200px;
 }
 
 #tablaproyectos {
